--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ crash.log
 # Ignore any .tfvars files that are generated automatically for each Terraform run. Most
 # .tfvars files are managed as part of configuration and so should be included in
 # version control.
-#
+*.tfvars
 # example.tfvars
 
 # Ignore override files as they are usually used to override resources locally and so
